safari load problem fixed + double scrollbars removed + readme file updated
git-svn-id: https://plugins.svn.wordpress.org/simple-pdf-bar/trunk@1173702 b8457f37-d9ea-0310-8a92-e5e31aec5664

--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,10 @@
 @charset "UTF-8";
 @import url(http://fonts.googleapis.com/css?family=Open+Sans:400,300,600);
 
+html {
+	overflow-y: hidden;
+}
+
 body {
 	margin: 0px;
 	font-family: 'Open Sans', sans-serif;
